my laptop boteye runtime environment setting. including face attribute.

--- a/apps/app_tracking/CMakeLists.txt
+++ b/apps/app_tracking/CMakeLists.txt
@@ -43,6 +43,7 @@ if(EnableRecognition)
     ${JSON_LIBRARY}
     ${FREETYPE_LIBRARY}
     ${CURL_LIBRARY}
+    ${CRYPTO_LIBRARY}
 )
 endif()
 # ============================================
